--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "main":"dist/src/functions/*.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "build": "tsc",
     "build:production": "npm run prestart && npm prune --production",
