--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "name": "azure-test",
   "packageManager": "npm@9.7.2",
+  "engines": {
+    "node": "18"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
