--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,10 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main":"dist/src/functions/*.js",
-  "engines": {
-    "node": "18"
-  },
+  "main":"dist/*/index.js",
   "scripts": {
     "build": "tsc",
     "build:production": "npm run prestart && npm prune --production",
@@ -16,7 +13,7 @@
   },
   "description": "",
   "devDependencies": {
-    "@azure/functions": "^4.0.0-alpha.11",
+    "@azure/functions": "^3.5.1",
     "@azure/static-web-apps-cli": "^1.1.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.1.6"
