--- a/apps/api/swa-cli.config.json
+++ b/apps/api/swa-cli.config.json
@@ -12,7 +12,8 @@
       "appBuildCommand": "npm run build",
       "appDevserverUrl": "http://localhost:5173",
       "appName": "my-first-static-web-app",
-      "resourceGroup": "my-first-static-web-app_group"
+      "resourceGroup": "my-first-static-web-app_group",
+      "swaConfigLocation": "."
     }
   }
 }
