--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,5 +17,8 @@
     "@azure/static-web-apps-cli": "^1.1.4",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "math": "*"
   }
 }
